tests/unit/language/errors/array_local_return_rejected.arche
// Returning a FRESH LOCAL array by value would dangle (its storage is the callee's frame). Array
// value-return / copy-out is not implemented — it must be a clear error, not silent garbage (char[N]
// used to return zeros). A char fresh-local return hits the copy-out-deferred message here; a
// non-char array return hits its own "use an out-param" message (see arrays/int_array_own_thread).
// Returning an `own` char[] parameter (by reference) stays valid — the slice idiom.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "copy-out" %t.out
make :: func() -> char[8] {
  buf: char[8];
  buf[0] = 65;
  return buf;
}

main :: proc() {
  r := make();
  printf("%d\n", r[0]);
}
